@@ -1,5 +1,10 @@
 2001-03-23  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&macro_define, &read_am_file): More work for the
+	former from the latter.  Reorganize the latter.
+
+2001-03-23  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&macro_define): Extract from...
 	(&read_am_file): here.
 
